objects/Customer_Project_Team__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Project Teams</relationshipLabel>
        <relationshipName>Customer_Project_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Customer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Customer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskRay_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Customer Project Teams</relationshipLabel>
        <relationshipName>Customer_Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Project Team</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Customer Project Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Project Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>